celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bharatgpt-celery-worker
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bharatgpt-celery
  template:
    metadata:
      labels:
        app: bharatgpt-celery
    spec:
      containers:
        - name: celery-worker
          image: bharatgpt-api:latest
          command: ["celery", "-A", "app.worker", "worker", "--loglevel=info"]
